        Class GroupExpressionTerm, GroupExpression, GroupPresentation,
                HomGroupPresentation:
            - Now uses size_t instead of unsigned long throughout for
              generator counts and generator indices.
            - The depth argument to GroupPresentation::proliferateRelators()
              is now of type int.
        Class Isomorphism<dim>:
            - The increment operators are now available in all dimensions
              (not just dimensions ≤ 6).
        Class IsoSigEncodingAPI, IsoSigTypeAPI:
            - New documentation-only classes that explain how encodings and
              signature types for isomorphism signatures are expected to behave.
        Class Laurent<T>:
            - For the iterator-based constructor and init() routine, the
              iterator type is now required to be random access.
        Class LPCol<...>:
            - This is now an internal class in the namespace regina::detail,
              and its template parameters have changed.  End users should have
              no need to refer to LPCol<...> at all.
        Class LPConstraint...:
            - All linear programming constraint classes must now adhere to the
              new concept LPConstraint.
            - The constant nConstraints and the routine constrain() are both
              removed, and replaced with the class constant array constraints[].
            - The arguments to addRows() have changed: it no longer takes an
              initial tableaux, but instead takes the relevant triangulation
              and column permutation.
        Class LPConstraintAPI, LPConstraintBase, LPConstraintSubspace:
            - The old base classes LPConstraintBase and LPConstraintSubspace
              are now deprecated, and should no longer be used.  Instead they
              have been replaced with the new concepts LPConstraint and
              LPSubspace that the relevant constraint types should adhere to.